# courseraBrownBelt

./: README.md
task_1/: CMakeLists.txt  hash_set.cpp  main.cpp
task_2/: main.cpp
task_3/: CMakeLists.txt  main.cpp
task_4/: CMakeLists.txt  main.cpp
week_2/task_1/: CMakeLists.txt  Ini.cpp  Ini.h  ini.cpp  ini.h  main.cpp  test_runner.h
week_2/task_2/: CMakeLists.txt  main.cpp  stats_aggregator.cpp  stats_aggregator.h  stats_aggregator_test.cpp
week_2/task_3/: CMakeLists.txt  collide.cpp  game_object.h  geo2d.h  main.cpp
week_2/task_4/: main.cpp
week_3/task_1/: main.cpp
week_3/task_2/: CMakeLists.txt  main.cpp
week_3/task_3/: main.cpp
